# cooking

./: .env  .gitignore  README.md  data.json  data_enriched.json  enrich_youtube.py  export_topic.py  index.html  install_local_cron.sh  pyproject.toml  run_local_sync.sh  session.session  setup.sh
src/cooking/: __init__.py  check_group.py  enrich_youtube.py  index.html  list_groups.py  list_topics.py  session.session  test.py
